[package]
name = "mcbc"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
parse_int = "0.6.0"
regex = "1.9.5"
shell-words = "1.1.0"
